omni/tests/goldens/types/undefined_ident_23.omni
let result23:int = missing23
